# podcast-generator

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  main.py  podcast.db-shm  podcast.db-wal  pyproject.toml  requirements.txt
apps/podcast-generator/: README.md
docs/: AGENTSTR_INTEGRATION.md  ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md  decentralized-ai-proposal.md  library.md  social-network-proposal.md  v3-agent-centric-roadmap.md  web-app.md
podcast_generator/: __init__.py  audio.py  builder.py  config.py  exceptions.py  fetcher.py  models.py  pipeline.py  tracker.py  translator.py  tts.py
podcast_generator/agents/: base.py  content_agent.py  manager.py  network_agent.py  social_agent.py  storage_agent.py
podcast_generator/web/: app.py  auth.py  db.py
podcast_generator/web/templates/: article_detail.html  articles.html  base.html  history_items.html  index.html  login.html  settings.html
src/: __init__.py  builder.py  config.py  fetcher.py  models.py  pipeline.py  translator.py  tts.py
src/web/: app.py  db.py
src/web/templates/: articles.html  history_items.html  index.html  login.html
tests/: conftest.py  test_core.py  test_sources.py  test_web.py
